--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
     "typed.js": "^2.0.9",
     "zone.js": "~0.8.26"
