--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-typing-animation": "^0.5.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
